Adjusted for jdk8, fixed copyMethod (kinda)